tdf#153004: error when copying content to a table without autovalue primary key

In fact, hsql is well managed without extra code.

Change-Id: I93e2b02f3ec78e263cd0f9fab6e33b708dbd3f11
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145525
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
(cherry picked from commit 9d2355b674d103fe8a73d2db716389980bb69e55)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151514
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>